fix: addd basic scrollbar

--- a/src/app/presentation/solution/solution.component.scss
+++ b/src/app/presentation/solution/solution.component.scss
@@ -14,7 +14,6 @@
 .left-drawer {
   width: 15%;
   min-width: 200px;
-  min-height: 100vh;
 
   h2 {
     padding: 20px 0;
